--- a/models/autoencoder/autoencoder_vq_32x32x32_8.yaml
+++ b/models/autoencoder/autoencoder_vq_32x32x32_8.yaml
@@ -36,5 +36,5 @@ data:
   batch_size: 1
   base_dir: /home/first/XctDiff/dataset
   json_list: ["json/LIDC_IDRI.json"]
-  num_workers: 16
+  num_workers: 8 # was 16
   pin_memory: True
