--- a/models/autoencoder/autoencoder_vq_32x32x32_8.yaml
+++ b/models/autoencoder/autoencoder_vq_32x32x32_8.yaml
@@ -10,7 +10,7 @@ model:
     ddconfig:
       in_channels: 1
       out_channels: 1
-      ch: 32
+      ch: 16 # was 32
       resolution: 128
       attn_resolutions: [8]
       ch_mult: [1,2,4]    # num_down = len(ch_mult)-1
@@ -34,7 +34,11 @@ model:
 
 data:
   batch_size: 1
-  base_dir: /Users/kai/Library/CloudStorage/OneDrive-UTS/Projects/XctDiff/dataset  # was /home/first/XctDiff/dataset
+  base_dir: /home/kpan/Data/projects/XctDiff/dataset
+#  base_dir: /Users/kai/Library/CloudStorage/OneDrive-UTS/Projects/XctDiff/dataset  # was /home/first/XctDiff/dataset
   json_list: ["json/leg_bone.json"] #["json/LIDC_IDRI.json"]
-  num_workers: 8 # was 16
+  num_workers: 0 # was 16
   pin_memory: True
+
+trainer:
+  accumulate_grad_batches: 16
